--- a/grade-entry-system/frontend/package.json
+++ b/grade-entry-system/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "chart.js": "^4.4.6",
     "daisyui": "^4.12.14",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "yup": "^1.4.0"
