グラフに6割のボーダー追加 レイアウト微調整

--- a/grade-entry-system/frontend/package.json
+++ b/grade-entry-system/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "chart.js": "^4.4.6",
+    "chartjs-plugin-annotation": "^3.1.0",
     "daisyui": "^4.12.14",
     "next": "15.0.3",
     "react": "^18.3.1",
