--- a/grade-entry-system/frontend/package.json
+++ b/grade-entry-system/frontend/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "vercel": "^39.1.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
